--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -1,9 +1,9 @@
+<!--
+-- Created by MikBac on 29.05.2019
+-->
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
-
 <form class="home">
-
-
     <table>
         <thead>
         <tr>
@@ -15,18 +15,16 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="exampleTable : ${tables}">
-            <td><span th:text="${exampleTable.id}"> id </span></td>
-            <td><span th:text="${exampleTable.kolumna1}"> kolumna1 </span></td>
-            <td><span th:text="${exampleTable.kolumna2}"> Kolumna2 </span></td>
-            <td><span th:text="${exampleTable.kolumna3}"> Kolumna3 </span></td>
-            <td><span th:text="${exampleTable.kolumna4}"> Kolumna4 </span></td>
+        <tr th:each="exampleTableModel : ${tables}">
+            <td><span th:text="${exampleTableModel.id}"> id </span></td>
+            <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
+            <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
+            <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
+            <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
         </tr>
         </tbody>
     </table>
-
     <br/><br/><br/>
-
     <div class="controls">
         <select id="select01">
             <option value="Kolumna1">Kolumna1</option>
@@ -36,8 +34,7 @@
         </select>
     </div>
     <br/><br/><br/>
-
-    <!-- Kolumna1 -->
+    <!-- Column-1 -->
     <div class="myClass" id="Kolumna1">
         <h3>Unikalne wiersze dla kolumny 1</h3>
         <table>
@@ -51,12 +48,12 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="exampleTable : ${uniqueTable1}">
-                <td><span th:text="${exampleTable.id}"> id </span></td>
-                <td><span th:text="${exampleTable.kolumna1}"> kolumna1 </span></td>
-                <td><span th:text="${exampleTable.kolumna2}"> Kolumna2 </span></td>
-                <td><span th:text="${exampleTable.kolumna3}"> Kolumna3 </span></td>
-                <td><span th:text="${exampleTable.kolumna4}"> Kolumna4 </span></td>
+            <tr th:each="exampleTableModel : ${uniqueTable1}">
+                <td><span th:text="${exampleTableModel.id}"> id </span></td>
+                <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
             </tr>
             </tbody>
         </table>
@@ -73,19 +70,18 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="exampleTable : ${repeatedTable1}">
-                <td><span th:text="${exampleTable.id}"> id </span></td>
-                <td><span th:text="${exampleTable.kolumna1}"> kolumna1 </span></td>
-                <td><span th:text="${exampleTable.kolumna2}"> Kolumna2 </span></td>
-                <td><span th:text="${exampleTable.kolumna3}"> Kolumna3 </span></td>
-                <td><span th:text="${exampleTable.kolumna4}"> Kolumna4 </span></td>
+            <tr th:each="exampleTableModel : ${repeatedTable1}">
+                <td><span th:text="${exampleTableModel.id}"> id </span></td>
+                <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
             </tr>
             </tbody>
         </table>
         <br/>
     </div>
-
-    <!-- Kolumna2 -->
+    <!-- Column-2 -->
     <div class="myClass" id="Kolumna2">
         <h3>Unikalne wiersze dla kolumny 2</h3>
         <table>
@@ -99,12 +95,12 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="exampleTable : ${uniqueTable2}">
-                <td><span th:text="${exampleTable.id}"> id </span></td>
-                <td><span th:text="${exampleTable.kolumna1}"> kolumna1 </span></td>
-                <td><span th:text="${exampleTable.kolumna2}"> Kolumna2 </span></td>
-                <td><span th:text="${exampleTable.kolumna3}"> Kolumna3 </span></td>
-                <td><span th:text="${exampleTable.kolumna4}"> Kolumna4 </span></td>
+            <tr th:each="exampleTableModel : ${uniqueTable2}">
+                <td><span th:text="${exampleTableModel.id}"> id </span></td>
+                <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
             </tr>
             </tbody>
         </table>
@@ -121,19 +117,18 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="exampleTable : ${repeatedTable2}">
-                <td><span th:text="${exampleTable.id}"> id </span></td>
-                <td><span th:text="${exampleTable.kolumna1}"> kolumna1 </span></td>
-                <td><span th:text="${exampleTable.kolumna2}"> Kolumna2 </span></td>
-                <td><span th:text="${exampleTable.kolumna3}"> Kolumna3 </span></td>
-                <td><span th:text="${exampleTable.kolumna4}"> Kolumna4 </span></td>
+            <tr th:each="exampleTableModel : ${repeatedTable2}">
+                <td><span th:text="${exampleTableModel.id}"> id </span></td>
+                <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
             </tr>
             </tbody>
         </table>
         <br/>
     </div>
-
-    <!-- Kolumna3 -->
+    <!-- Column-3 -->
     <div class="myClass" id="Kolumna3">
         <h3>Unikalne wiersze dla kolumny 3</h3>
         <table>
@@ -147,12 +142,12 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="exampleTable : ${uniqueTable3}">
-                <td><span th:text="${exampleTable.id}"> id </span></td>
-                <td><span th:text="${exampleTable.kolumna1}"> kolumna1 </span></td>
-                <td><span th:text="${exampleTable.kolumna2}"> Kolumna2 </span></td>
-                <td><span th:text="${exampleTable.kolumna3}"> Kolumna3 </span></td>
-                <td><span th:text="${exampleTable.kolumna4}"> Kolumna4 </span></td>
+            <tr th:each="exampleTableModel : ${uniqueTable3}">
+                <td><span th:text="${exampleTableModel.id}"> id </span></td>
+                <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
             </tr>
             </tbody>
         </table>
@@ -169,19 +164,18 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="exampleTable : ${repeatedTable3}">
-                <td><span th:text="${exampleTable.id}"> id </span></td>
-                <td><span th:text="${exampleTable.kolumna1}"> kolumna1 </span></td>
-                <td><span th:text="${exampleTable.kolumna2}"> Kolumna2 </span></td>
-                <td><span th:text="${exampleTable.kolumna3}"> Kolumna3 </span></td>
-                <td><span th:text="${exampleTable.kolumna4}"> Kolumna4 </span></td>
+            <tr th:each="exampleTableModel : ${repeatedTable3}">
+                <td><span th:text="${exampleTableModel.id}"> id </span></td>
+                <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
             </tr>
             </tbody>
         </table>
         <br/>
     </div>
-
-    <!-- Kolumna4 -->
+    <!-- Column-4 -->
     <div class="myClass" id="Kolumna4">
         <h3>Unikalne wiersze dla kolumny 4</h3>
         <table>
@@ -195,12 +189,12 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="exampleTable : ${uniqueTable4}">
-                <td><span th:text="${exampleTable.id}"> id </span></td>
-                <td><span th:text="${exampleTable.kolumna1}"> kolumna1 </span></td>
-                <td><span th:text="${exampleTable.kolumna2}"> Kolumna2 </span></td>
-                <td><span th:text="${exampleTable.kolumna3}"> Kolumna3 </span></td>
-                <td><span th:text="${exampleTable.kolumna4}"> Kolumna4 </span></td>
+            <tr th:each="exampleTableModel : ${uniqueTable4}">
+                <td><span th:text="${exampleTableModel.id}"> id </span></td>
+                <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
             </tr>
             </tbody>
         </table>
@@ -217,29 +211,23 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="exampleTable : ${repeatedTable4}">
-                <td><span th:text="${exampleTable.id}"> id </span></td>
-                <td><span th:text="${exampleTable.kolumna1}"> kolumna1 </span></td>
-                <td><span th:text="${exampleTable.kolumna2}"> Kolumna2 </span></td>
-                <td><span th:text="${exampleTable.kolumna3}"> Kolumna3 </span></td>
-                <td><span th:text="${exampleTable.kolumna4}"> Kolumna4 </span></td>
+            <tr th:each="exampleTableModel : ${repeatedTable4}">
+                <td><span th:text="${exampleTableModel.id}"> id </span></td>
+                <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
+                <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
             </tr>
             </tbody>
         </table>
         <br/>
     </div>
-
-
 </form>
-
-
-<link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
-
+<link rel="stylesheet" type="text/less" th:href="@{/less/home.less}"/>
+<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </html>
-
-
 <script type="text/javascript">
     $(function () {
         $("#Kolumna1").show();
