--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -17,10 +17,10 @@
         <tbody>
         <tr th:each="exampleTableModel : ${tables}">
             <td><span th:text="${exampleTableModel.id}"> id </span></td>
-            <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
-            <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
-            <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
-            <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
+            <td><span th:text="${exampleTableModel.column1}"> kolumna1 </span></td>
+            <td><span th:text="${exampleTableModel.column2}"> Kolumna2 </span></td>
+            <td><span th:text="${exampleTableModel.column3}"> Kolumna3 </span></td>
+            <td><span th:text="${exampleTableModel.column4}"> Kolumna4 </span></td>
         </tr>
         </tbody>
     </table>
@@ -50,10 +50,10 @@
             <tbody>
             <tr th:each="exampleTableModel : ${uniqueTable1}">
                 <td><span th:text="${exampleTableModel.id}"> id </span></td>
-                <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
+                <td><span th:text="${exampleTableModel.column1}"> kolumna1 </span></td>
+                <td><span th:text="${exampleTableModel.column2}"> Kolumna2 </span></td>
+                <td><span th:text="${exampleTableModel.column3}"> Kolumna3 </span></td>
+                <td><span th:text="${exampleTableModel.column4}"> Kolumna4 </span></td>
             </tr>
             </tbody>
         </table>
@@ -72,10 +72,10 @@
             <tbody>
             <tr th:each="exampleTableModel : ${repeatedTable1}">
                 <td><span th:text="${exampleTableModel.id}"> id </span></td>
-                <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
+                <td><span th:text="${exampleTableModel.column1}"> kolumna1 </span></td>
+                <td><span th:text="${exampleTableModel.column2}"> Kolumna2 </span></td>
+                <td><span th:text="${exampleTableModel.column3}"> Kolumna3 </span></td>
+                <td><span th:text="${exampleTableModel.column4}"> Kolumna4 </span></td>
             </tr>
             </tbody>
         </table>
@@ -97,10 +97,10 @@
             <tbody>
             <tr th:each="exampleTableModel : ${uniqueTable2}">
                 <td><span th:text="${exampleTableModel.id}"> id </span></td>
-                <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
+                <td><span th:text="${exampleTableModel.column1}"> kolumna1 </span></td>
+                <td><span th:text="${exampleTableModel.column2}"> Kolumna2 </span></td>
+                <td><span th:text="${exampleTableModel.column3}"> Kolumna3 </span></td>
+                <td><span th:text="${exampleTableModel.column4}"> Kolumna4 </span></td>
             </tr>
             </tbody>
         </table>
@@ -119,10 +119,10 @@
             <tbody>
             <tr th:each="exampleTableModel : ${repeatedTable2}">
                 <td><span th:text="${exampleTableModel.id}"> id </span></td>
-                <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
+                <td><span th:text="${exampleTableModel.column1}"> kolumna1 </span></td>
+                <td><span th:text="${exampleTableModel.column2}"> Kolumna2 </span></td>
+                <td><span th:text="${exampleTableModel.column3}"> Kolumna3 </span></td>
+                <td><span th:text="${exampleTableModel.column4}"> Kolumna4 </span></td>
             </tr>
             </tbody>
         </table>
@@ -144,10 +144,10 @@
             <tbody>
             <tr th:each="exampleTableModel : ${uniqueTable3}">
                 <td><span th:text="${exampleTableModel.id}"> id </span></td>
-                <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
+                <td><span th:text="${exampleTableModel.column1}"> kolumna1 </span></td>
+                <td><span th:text="${exampleTableModel.column2}"> Kolumna2 </span></td>
+                <td><span th:text="${exampleTableModel.column3}"> Kolumna3 </span></td>
+                <td><span th:text="${exampleTableModel.column4}"> Kolumna4 </span></td>
             </tr>
             </tbody>
         </table>
@@ -166,10 +166,10 @@
             <tbody>
             <tr th:each="exampleTableModel : ${repeatedTable3}">
                 <td><span th:text="${exampleTableModel.id}"> id </span></td>
-                <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
+                <td><span th:text="${exampleTableModel.column1}"> kolumna1 </span></td>
+                <td><span th:text="${exampleTableModel.column2}"> Kolumna2 </span></td>
+                <td><span th:text="${exampleTableModel.column3}"> Kolumna3 </span></td>
+                <td><span th:text="${exampleTableModel.column4}"> Kolumna4 </span></td>
             </tr>
             </tbody>
         </table>
@@ -191,10 +191,10 @@
             <tbody>
             <tr th:each="exampleTableModel : ${uniqueTable4}">
                 <td><span th:text="${exampleTableModel.id}"> id </span></td>
-                <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
+                <td><span th:text="${exampleTableModel.column1}"> kolumna1 </span></td>
+                <td><span th:text="${exampleTableModel.column2}"> Kolumna2 </span></td>
+                <td><span th:text="${exampleTableModel.column3}"> Kolumna3 </span></td>
+                <td><span th:text="${exampleTableModel.column4}"> Kolumna4 </span></td>
             </tr>
             </tbody>
         </table>
@@ -213,10 +213,10 @@
             <tbody>
             <tr th:each="exampleTableModel : ${repeatedTable4}">
                 <td><span th:text="${exampleTableModel.id}"> id </span></td>
-                <td><span th:text="${exampleTableModel.kolumna1}"> kolumna1 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna2}"> Kolumna2 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna3}"> Kolumna3 </span></td>
-                <td><span th:text="${exampleTableModel.kolumna4}"> Kolumna4 </span></td>
+                <td><span th:text="${exampleTableModel.column1}"> kolumna1 </span></td>
+                <td><span th:text="${exampleTableModel.column2}"> Kolumna2 </span></td>
+                <td><span th:text="${exampleTableModel.column3}"> Kolumna3 </span></td>
+                <td><span th:text="${exampleTableModel.column4}"> Kolumna4 </span></td>
             </tr>
             </tbody>
         </table>
