--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -2,7 +2,7 @@
 -- Created by MikBac on 29.05.2019
 -->
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml" xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <form class="home">
     <table>
         <thead>
